# rust_indexer

./: .env  Cargo.toml
infrastructure/: docker-compose.yml  setup.sh
src/: main.rs
