[package]
name = "rust_indexer"
version = "0.1.0"
authors = ["korniii"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
futures = "0.3.4"
dotenv = "0.15.0"
anyhow = "1.0.28"
tokio = { version = "0.2", features = ["full"] }
#async-std = { version = "1.4.0", features = [ "attributes" ] }
elasticsearch = "7.8.0-alpha.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }


